--- a/TRUEST/Base.lproj/Main.storyboard
+++ b/TRUEST/Base.lproj/Main.storyboard
@@ -571,7 +571,7 @@
                                     <constraint firstAttribute="width" constant="260" id="l5L-4S-4hQ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="n3N-rA-gJt">
